--- a/WS/WS_app/templates/WS_app/car_list.html
+++ b/WS/WS_app/templates/WS_app/car_list.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Car List</title>
 </head>
 <body>
- <h1>Car List</h1>
+ <h1>List of the available cars</h1>
     <ul>
         {% for car in cars %}
             <li>
