--- a/WS/WS_app/templates/WS_app/car_list.html
+++ b/WS/WS_app/templates/WS_app/car_list.html
@@ -10,7 +10,7 @@
         {% for car in cars %}
             <li>
                 <h3>{{ car.title }}</h3>
-                <p>IMG_URL: {{ car.img_url }}</p>
+                <p>Image URL: {{ car.img_url }}</p>
                 <p>Price: {{ car.price }}</p>
                 <p>Location: {{ car.location }}</p>
             </li>
